--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,28 @@
 body{
 	margin:50px 100px 50px 100px;
-	border-style:solid;
-	border-width:1px;
 	border-color:white;
-	
+	word-break: break-all;
+	background-color:#E3E3DF;
+	color:#3E3E3D;
+	font-family: Georgia, serif;
 }
 a{
 	text-decoration:none;
+	font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
 	font-weight:bold;
+	color:#333332;
+	
 }
 a:link{
-	color:black;
+	color:#333332;
 }
 a:visited{
-	color:black;
+	color:#333332;
 }
 
 a:hover{
-	color:red;
+	text-shadow: 2px -2px 4px #646463;
+	/*color:red;*/
 	
 }
 /*////////////////////////TOP-class elements/////////////////////////*/
@@ -78,27 +83,20 @@ a:hover{
 	width:100%;
 	
 }
-#left_menu{
-	
-	
+#left_menu{	
 	width:24%;
 	height:100%;
 	float:left;
 	
 }
 
-.content{
-	
+.content{	
 	width:50%;
 	height:100%;
-	
 	float:left;
 }
 
-#right_menu{
-	
-	
-	
+#right_menu{	
 	width:24%;
 	height:100%;
 	float:right;
@@ -106,6 +104,11 @@ a:hover{
 .art_form{
 margin:2px 2px 2px 2px;
 
+}
+.inline_list{
+	display:inline;
+	list-style-type:none;
+	width:100%;
 }
 .non_mark_list{
 	list-style-type:none;
@@ -154,13 +157,23 @@ margin-top:2%;
 	margin-top:2px;
 	margin-bottom:2px;
 }
+/*////////////////////////REG FORM//////////////////////////////////*/
 #reg_form{
-	width:50%;
-	margin-top:10%;
-	margin-left:20%;
-	margin-bottom:25%;
-	text-align:right;
+	width:500px;
+	margin-top:100px;
+	margin-left:400px;
+	text-align:left;
 }
+.field_name{
+	width:150px;
+	float:left;
+	margin-top:3px;
+}
+.field_mess{
+	color:#CC0000;
+	
+}
+/*//////////////////////////////////////////////////////////////////////*/
 #mark{
 	margin-top: 50px;
 	
@@ -170,10 +183,14 @@ margin-top:2%;
 	margin-bottom: 20px;
 }
 #comments{
+	width:80%;
 	margin-left:20px;
-	overflow: auto;
+	word-break: break-all;
 }
 #comment{
-	overflow: auto;
+	
 	margin-top:20px;
+}
+.eng_word{
+	width:65%;
 }
